# libratp-barebox

./: .gitignore  Makefile.am  README.md  annotation-glossary.html  autogen.sh  configure.ac  index.html  ix01.html  libratp-barebox-Barebox-over-RATP.html  libratp-barebox-Library-logging.html  libratp-barebox-Library-version.html  libratp-barebox.devhelp2  pt01.html  pt02.html
doc/reference/: Makefile.am  libratp-barebox-docs.xml  libratp-barebox-sections.txt
m4/: compiler-warnings.m4
src/: Makefile.am
src/libratp-barebox/: Makefile.am  ratp-barebox.c  ratp-barebox.h.in  ratp-barebox.pc.in  ratp-bb-common.h
src/ratp-barebox-cli/: Makefile.am  ratp-barebox-cli.c
